2005-12-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (is_group_member): Use new rather than
	C99 VLAs.
	(setup_chroot): setup_type_string is a std::string, rather than a
	char *.

	* schroot/sbuild-config.cc (validate_chroots): Return bad_chroots.

	* schroot/sbuild-chroot.cc (read_keyfile): Initialise bool values
	to quell compiler warning.

	* schroot/sbuild-auth.h (ErrorCode): Remove trailing comma.

	* schroot/sbuild-auth.cc
	(auth_conv): Use signed rather than unsigned int in for loops.
	(Auth::Auth): Correct member initialisation order.

	* schroot/Makefile.am (AM_CXXFLAGS): Add additional flags: -Wall
	-Wcast-align -Wwrite-strings -pedantic -Wcast-qual
	-Wredundant-decls.

2005-12-25  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Remove checks for Glib.  Glib is now completely
	removed from the sources.

	* schroot/Makefile.am (libsbuild_la_LIBADD): Remove Glib library.

	* schroot/schroot-releaselock.cc: Convert from GOption to
	Boost.Program_options.

	* schroot/schroot-options.cc: Convert from GOption to
	Boost.Program_options.

2005-12-24  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-util.cc: Remove format_string.

	* Convert all uses of sbuild::format_string to boost::format.

	* schroot/sbuild-error.h (sbuild): Add a constructor which gets
	its message from a boost::format, rather than a std::string.

2005-12-24  Roger Leigh  <rleigh@debian.org>

	* debian/control (Build-Depends): Add libboost-dev and
	libboost-program-options.

	* schroot/Makefile.am (libsbuild_la_LIBADD): Add BOOST_LIBS.

	* configure.ac: Add checks for Boost.Format and
	Boost.Program_options headers and shared libraries.

2005-12-23  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc:
	(sbuild_session_setup_chroot_child_setup): Remove.
	(setup_chroot): Replace g_spawn_sync with fork(), exec() and
	wait().  The uid, gid and group list are set prior to calling
	exec, as with sbuild_session_setup_chroot_child_setup previously.